# PySymGym

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AVL_Tree_Reconstruct.csv  LICENSE  Makefile  README.md  VSharp.tests.last  assembled_astar.csv  assembled_binarysearch.csv  config.ini  config_all_vals.yml  config_optuna.yml  config_svm.yml  config_svm_send_model.yml  david_config_for_svms_each_step.yml  david_config_svm_send_model.yml  david_val_config.yml  david_val_dotnet_dataset.json  david_val_experiment_config.yml  david_val_experiment_config_model.yml  david_val_experiment_dotnet_dataset.json  debug_game.py  excluded_dataset.json  init.py  java_dataset.json  mlflow_experiment.ipynb  model.onnx  pyproject.toml  requirements.txt  val_experiment_config_model.yml  val_experiment_config_usvm_each_step.yml  val_experiment_config_usvm_model.yml  val_experiment_dotnet_dataset.json
.github/: dependabot.yml
AIAgent/: a.ipynb  captum_explain.ipynb  config.py  dominators_experiment.ipynb  epochs_statistics.py  evaluation_time.csv  launch_servers.py  model_kwargs.yaml  onyx.py  paths.py  pc_removing.py  pcs.out  pretrain.py  run_common_model_training.py  run_experiment.py  run_pretraining.py  run_training.py  script_for_pc_roots.py  trial_0.pkl
BestModelBCEwithlogists/: BCE_model.onnx  BCE_model_kwargs.yaml  modelBCE.pth
BestModelBCEwithlogists*/: BCE*_model.onnx  BCE*_model_kwargs.yaml  modelBCE*.pth
BestModelKLDiv/: KLDiv_model.onnx  KLDiv_model_kwargs.yaml  modelKLDiv.pth
Comp_BCE_BCE*/: mean_statistics.csv  result_count.csv
Comp_BCE_BCEnoRoots120/: result_count.csv
Comp_KLDiv_BCE/: result_count.csv
Comp_KLDiv_BCE*/: mean_statistics.csv  result_count.csv
Comp_KLDiv_BCE120/: mean_statistics.csv
Comp_V_BCE/: mean_statistics.csv  result_count.csv
Comp_V_BCE*/: mean_statistics.csv  result_count.csv
Comp_V_BCE120/: mean_statistics.csv  result_count.csv
Comp_V_BCEnoRoots120/: mean_statistics.csv
Comp_V_KLDiv/: mean_statistics.csv  result_count.csv
GraphicsResults/: README.md
VSharp.tests.0/: AStarMain.error1.vst  AStarMain.error2.vst  AStarMain.error3.vst  AStarMain.error4.vst  AStarMain.error5.vst  report.txt
VSharp.tests.1/: GeneratePrimesUpTo.error1.vst  GeneratePrimesUpTo.error2.vst  GeneratePrimesUpTo.error4.vst  GeneratePrimesUpTo.error5.vst  GeneratePrimesUpTo.error6.vst  GeneratePrimesUpTo.error7.vst  GeneratePrimesUpTo.test3.vst
VSharp.tests.2/: GeneratePrimesUpTo.error4.vst  GeneratePrimesUpTo.error5.vst  GeneratePrimesUpTo.error6.vst  GeneratePrimesUpTo.error7.vst  GeneratePrimesUpTo.test1.vst  GeneratePrimesUpTo.test2.vst  report.txt
VSharp.tests.4/: BinarySearch.error1.vst  report.txt
VSharp.tests.5/: BinarySearch.test1.vst  BinarySearch.test2.vst  BinarySearch.test4.vst  BinarySearch.test6.vst  report.txt
VSharp.tests.6/: BinarySearch.test3.vst  BinarySearch.test5.vst  BinarySearch.test7.vst  report.txt
best_model_78/: model.onnx  model.pth  model_kwargs.yaml
reportmethods/: file_candidates.csv
results_BW_direct_1h/: ExecutionTreeContributedCoverage.csv
results_BreadthFirstWalk/: ExecutionTreeContributedCoverage.csv
results_DepthFirstWalk/: ExecutionTreeContributedCoverage.csv
results_IncomingEdges/: ExecutionTreeContributedCoverage.csv
results_KruskalGraph.csv/: ExecutionTreeContributedCoverage.csv
results_MatrixMultiplication.multiply_matrix.csv/: ExecutionTreeContributedCoverage.csv
results_comb_sort/: ExecutionTreeContributedCoverage.csv
results_editdistance/: ExecutionTreeContributedCoverage.csv
results_getTranspose.csv/: ExecutionTreeContributedCoverage.csv
results_matrix_inverse/: ExecutionTreeContributedCoverage.csv
results_test2/: ExecutionTreeContributedCoverage.csv
tools/: .gitignore  README.md  clean.py  generate_episodes.py
workflow/: config_combined_editdistance_with_combsort.yml  config_debug.yml  config_editdistance_only.yml  config_for_tests.ini  config_for_tests.yml  config_for_tests_loss_val.yml  config_for_tests_send_model_val.yml  config_mini.yml  config_stralgo_methods.yml  config_thealgorithms_methods.yml  edit_distanse.json  (+12 more)
(+338 files in other folders)
