[tool.poetry]
authors = [
  "Semyon Grigorev rsdpisuy@gmail.com",
  "Ekaterina Shemetova katyacyfra@gmail.com",
  "Max Nigmatulin mvnigma@gmail.com",
  "Anya Chistyakova chi.vinny0702@gmail.com",
]
description = "Python infrastructure to train paths selectors for symbolic execution engines."
license = "LICENSE"
name = "pysymgym"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.13.2"
dataclasses-json = "^0.6.7"
func-timeout = "^4.3.5"
httplib2 = "^0.31.0"
joblib = "^1.5.3"
matplotlib = "^3.10.8"
natsort = "^8.4.0"
onnx = "^1.20.0"
onnxruntime = "^1.23.1"
optuna = "^4.6.0"
pandas = "^2.3.3"
psutil = "^7.1.3"
pydantic = "^2.12.5"
python = "^3.11"
tabulate = "^0.9.0"
torch = "^2.7.1"
torch-geometric = "^2.7.0"
tqdm = "^4.67.1"
websocket-client = "^1.9.0"
mlflow = "^3.6.0"
cattrs = "^25.3.0"
attrs = "^25.4.0"
pynvml = "^13.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.poetry.group.formatter.dependencies]
ruff = "^0.14.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==2.2.1"]

[tool.ruff]
include = ["pyproject.toml", "AIAgent/**/*.py", "*.ipynb"]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "B"]
ignore = ["E501"]
extend-select = ["E226"]
preview = true
explicit-preview-rules = true
